Master section schema refactor

--- a/src/sections/header.liquid
+++ b/src/sections/header.liquid
@@ -21,7 +21,22 @@
         <a class="nav-link" href="/products/bicycle-8-gram-clay-poker-chip-set">Chips</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/collections/1885">1885 Collection</a>
+        <a class="nav-link" href="/collections/1885-bicycle-cards">1885</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/collections/asteroid-bicycle-cards">Asteroid</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/collections/brybelly">Brybelly</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/collections/1964-artists-cards">1964</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/collections/capitol-bicycle-cards">Capitol</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/collections/mosaique-bicycle-cards">Mosaique</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/cart">Cart</a>
