--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -14,6 +14,8 @@
   {% include 'style-tags', layout: 'theme' %}
   {% include 'script-tags', layout: 'theme' %}
 
+  {{ 'ec-base-styles.scss.css' | asset_url | stylesheet_tag }}
+
   {{ content_for_header }}
 
 </head>
