--- a/src/sections/master-section.liquid
+++ b/src/sections/master-section.liquid
@@ -5,38 +5,22 @@
   Master Section
   -----------------------------------------------------------------------------
 
-  This section contains all content objects a lil ole Shopify theme can have.
-
-  Dependencies:
-
   Liquid:
-
-  Elements:
   - Eyebrow Element - `snippets/eyebrow-element.liquid`
   - Heading Element - `snippets/heading-element`
   - Paragraph Element - `snippets/paragraph-element`
   - Link Element - `snippets/link-element`
-
-  Objects:
   - Image Object - `snippets/image-object.liquid`
   - Video Object - `snippets/video-object.liquid`
   - Embed Object - `snippets/embed-object.liquid`
   - Content Object - `snippets/content-object.liquid`
-
-  Components:
   - Content Container `snippets/content-container.liquid`
   - Grid Item - `snippets/grid-item.liquid`
   - Section - `snippets/section.liquid`
-  - Content Wrapper - ? TODO make this and name it better.
-  this is for us to be able to apply padding/bg/etc logic
-  with the same piece of code
-
-  Composed Compnents:
+  - Content Wrapper - `snippets/content-wrapper.liquid`
   - Content Header - `snippets/content-header.liquid`
   - Content Footer - `snippets/content-footer.liquid`
   - Content Card - `snippets/content-card.liquid`
-  - Article Card - `snippets/article-card.liquid`
-  - Product Card - `snippets/product-card.liquid`
 
   Styling:
 
@@ -436,43 +420,6 @@ we need to figure out what to do. Either get rid of the box or make it overflow
       {% endcapture %}
 
       {% comment %} END - Content Card Grid Item {% endcomment %}
-    {% elsif block.type == 'product-grid-item' %}
-      {% comment %} START - Product Card Grid Item {% endcomment %}
-
-      {% comment %} Block Settings {% endcomment %}
-      {% assign product = all_products[block.settings.product] %}
-      {% assign featured_image = product.featured_image.src
-        | img_url: '600x' %}
-      {% assign product_excerpt = product.metafields.custom_fields["excerpt"] %}
-
-      {% comment %} Block Content {% endcomment %}
-      {% capture content %}
-        {% render 'product-card',
-          featured_image: featured_image,
-          id: product.id,
-          title: product.title,
-          excerpt: product_excerpt,
-          url: product.url,
-          compare_at_price: product.compare_at_price,
-          price_varies: product.price_varies,
-          price: product.price %}
-      {% endcapture %}
-
-      {% comment %} END - Product Card Grid Item {% endcomment %}
-    {% elsif block.type == 'article-grid-item' %}
-      {% comment %} START - Article Card Grid Item {% endcomment %}
-
-      {% comment %} Block Settings {% endcomment %}
-      {% assign article =  articles[block.settings.article] %}
-
-      {% comment %} Block Content {% endcomment %}
-      {% capture content %}
-        {% render 'article-card',
-          article: article,
-          show_excerpt: true %}
-      {% endcapture %}
-
-      {% comment %} END - Article Card Grid Item {% endcomment %}
     {% endif %}
 
     {% comment %} Render Grid Item With Embedded Content {% endcomment %}
@@ -613,6 +560,22 @@ we need to figure out what to do. Either get rid of the box or make it overflow
         "info": "Settings defined here are global for the section and will effect the header, content, and footer."
       },
       {
+        "type": "select",
+        "id": "content_container",
+        "label": "Content Container",
+        "options": [
+          { "value": "container", "label": "Contained at all breakpoints"},
+          { "value": "container-sm", "label": "95% wide with 2.5% padding until small breakpoint"},
+          { "value": "container-md", "label": "95% wide with 2.5% padding until medium breakpoint"},
+          { "value": "container-lg", "label": "95% wide with 2.5% padding until large breakpoint"},
+          { "value": "container-xl", "label": "95% wide with 2.5% padding until xlarge breakpoint"},
+          { "value": "container-fluid", "label": "95% wide with 2.5% padding at all breakpoints"},
+          { "value": "", "label": "100% wide at all breakpoints"}
+        ],
+        "default": "container-xl",
+        "info": "Determines the width of container that the main content of the section will be contained to. Options are full width, contained, or 95% of the screen width at all or specified screen widths."
+      },
+      {
         "type": "header",
         "content": "Medium & Up Devices",
         "info": "Screen sizes larger than 768px"
@@ -719,22 +682,6 @@ we need to figure out what to do. Either get rid of the box or make it overflow
         "unit": "%"
       },
       {
-        "type": "select",
-        "id": "content_container",
-        "label": "Content Container",
-        "options": [
-          { "value": "container", "label": "Contained at all breakpoints"},
-          { "value": "container-sm", "label": "95% wide with 2.5% padding until small breakpoint"},
-          { "value": "container-md", "label": "95% wide with 2.5% padding until medium breakpoint"},
-          { "value": "container-lg", "label": "95% wide with 2.5% padding until large breakpoint"},
-          { "value": "container-xl", "label": "95% wide with 2.5% padding until xlarge breakpoint"},
-          { "value": "container-fluid", "label": "95% wide with 2.5% padding at all breakpoints"},
-          { "value": "", "label": "100% wide at all breakpoints"}
-        ],
-        "default": "container-xl",
-        "info": "Determines the width of container that the main content of the section will be contained to. Options are full width, contained, or 95% of the screen width at all or specified screen widths."
-      },
-      {
         "type": "header",
         "content": "----- Section Background Image -----"
       },
@@ -793,6 +740,65 @@ we need to figure out what to do. Either get rid of the box or make it overflow
       {
         "type": "header",
         "content": "Layout Settings"
+      },
+      {
+        "type": "header",
+        "content": "-------- Header Background ---------"
+      },
+      {
+        "type": "color",
+        "id": "header_bg_color",
+        "label": "Background Color"
+      },
+      {
+        "type": "select",
+        "id": "header_bg_color_alpha",
+        "label": "Background Color Transparency",
+        "options": [
+          { "value": "00", "label": "0%" },
+          { "value": "0D", "label": "5%" },
+          { "value": "1A", "label": "10%" },
+          { "value": "26", "label": "15%" },
+          { "value": "33", "label": "20%" },
+          { "value": "40", "label": "25%" },
+          { "value": "4D", "label": "30%" },
+          { "value": "59", "label": "35%" },
+          { "value": "66", "label": "40%" },
+          { "value": "73", "label": "45%" },
+          { "value": "80", "label": "50%" },
+          { "value": "8C", "label": "55%" },
+          { "value": "99", "label": "60%" },
+          { "value": "A6", "label": "65%" },
+          { "value": "B3", "label": "70%" },
+          { "value": "BF", "label": "75%" },
+          { "value": "CC", "label": "80%" },
+          { "value": "D9", "label": "85%" },
+          { "value": "E6", "label": "90%" },
+          { "value": "F2", "label": "95%" },
+          { "value": "FF", "label": "100%" }
+        ],
+        "default": "FF",
+        "info": "Transparency is applied to background color and can be combined with the background image to create unique overlays with opacity."
+      },
+      {
+        "type": "header",
+        "content": "---------- Header Container -----------"
+      },
+      {
+        "type": "select",
+        "id": "header_container",
+        "label": "Container",
+        "options": [
+          { "value": "container", "label": "Contained at all breakpoints"},
+          { "value": "container-sm", "label": "95% wide with 2.5% padding until small breakpoint"},
+          { "value": "container-md", "label": "95% wide with 2.5% padding until medium breakpoint"},
+          { "value": "container-lg", "label": "95% wide with 2.5% padding until large breakpoint"},
+          { "value": "container-xl", "label": "95% wide with 2.5% padding until xlarge breakpoint"},
+          { "value": "container-fluid", "label": "95% wide with 2.5% padding at all breakpoints"},
+          { "value": "", "label": "100% wide at all breakpoints"}
+        ],
+        "info": "Determines the width of container that the header content column will be contained to. Options are full width, contained, or 95% of the screen width at all or specified screen widths.",
+        "default": "container-xl"
       },
       {
         "type": "header",
@@ -949,65 +955,6 @@ we need to figure out what to do. Either get rid of the box or make it overflow
         "step":      1,
         "default":   0,
         "unit": "%"
-      },
-      {
-        "type": "header",
-        "content": "-------- Header Background ---------"
-      },
-      {
-        "type": "color",
-        "id": "header_bg_color",
-        "label": "Background Color"
-      },
-      {
-        "type": "select",
-        "id": "header_bg_color_alpha",
-        "label": "Background Color Transparency",
-        "options": [
-          { "value": "00", "label": "0%" },
-          { "value": "0D", "label": "5%" },
-          { "value": "1A", "label": "10%" },
-          { "value": "26", "label": "15%" },
-          { "value": "33", "label": "20%" },
-          { "value": "40", "label": "25%" },
-          { "value": "4D", "label": "30%" },
-          { "value": "59", "label": "35%" },
-          { "value": "66", "label": "40%" },
-          { "value": "73", "label": "45%" },
-          { "value": "80", "label": "50%" },
-          { "value": "8C", "label": "55%" },
-          { "value": "99", "label": "60%" },
-          { "value": "A6", "label": "65%" },
-          { "value": "B3", "label": "70%" },
-          { "value": "BF", "label": "75%" },
-          { "value": "CC", "label": "80%" },
-          { "value": "D9", "label": "85%" },
-          { "value": "E6", "label": "90%" },
-          { "value": "F2", "label": "95%" },
-          { "value": "FF", "label": "100%" }
-        ],
-        "default": "FF",
-        "info": "Transparency is applied to background color and can be combined with the background image to create unique overlays with opacity."
-      },
-      {
-        "type": "header",
-        "content": "---------- Header Container -----------"
-      },
-      {
-        "type": "select",
-        "id": "header_container",
-        "label": "Container",
-        "options": [
-          { "value": "container", "label": "Contained at all breakpoints"},
-          { "value": "container-sm", "label": "95% wide with 2.5% padding until small breakpoint"},
-          { "value": "container-md", "label": "95% wide with 2.5% padding until medium breakpoint"},
-          { "value": "container-lg", "label": "95% wide with 2.5% padding until large breakpoint"},
-          { "value": "container-xl", "label": "95% wide with 2.5% padding until xlarge breakpoint"},
-          { "value": "container-fluid", "label": "95% wide with 2.5% padding at all breakpoints"},
-          { "value": "", "label": "100% wide at all breakpoints"}
-        ],
-        "info": "Determines the width of container that the header content column will be contained to. Options are full width, contained, or 95% of the screen width at all or specified screen widths.",
-        "default": "container-xl"
       },
       {
         "type": "header",
@@ -1356,16 +1303,16 @@ we need to figure out what to do. Either get rid of the box or make it overflow
         "id": "header_eyebrow_style",
         "label": "Eyebrow Style",
         "options": [
-          { "value": "badge-primary", "label": "Primary"},
-          { "value": "badge-secondary", "label": "Secondary"},
-          { "value": "badge-success", "label": "Success"},
-          { "value": "badge-danger", "label": "Danger"},
-          { "value": "badge-warning", "label": "Warning"},
-          { "value": "badge-info", "label": "Info"},
-          { "value": "badge-light", "label": "Light"},
-          { "value": "badge-dark", "label": "Dark"}
+          { "value": "primary", "label": "Primary"},
+          { "value": "secondary", "label": "Secondary"},
+          { "value": "success", "label": "Success"},
+          { "value": "danger", "label": "Danger"},
+          { "value": "warning", "label": "Warning"},
+          { "value": "info", "label": "Info"},
+          { "value": "light", "label": "Light"},
+          { "value": "dark", "label": "Dark"}
         ],
-        "default": "badge-dark"
+        "default": "dark"
       },
       {
         "type": "text",
@@ -2028,15 +1975,16 @@ we need to figure out what to do. Either get rid of the box or make it overflow
         "id": "footer_eyebrow_style",
         "label": "Eyebrow Style",
         "options": [
-          { "value": "badge-primary", "label": "Primary"},
-          { "value": "badge-secondary", "label": "Secondary"},
-          { "value": "badge-success", "label": "Success"},
-          { "value": "badge-danger", "label": "Danger"},
-          { "value": "badge-warning", "label": "Warning"},
-          { "value": "badge-info", "label": "Info"},
-          { "value": "badge-light", "label": "Light"},
-          { "value": "badge-dark", "label": "Dark"}
-        ]
+          { "value": "primary", "label": "Primary"},
+          { "value": "secondary", "label": "Secondary"},
+          { "value": "success", "label": "Success"},
+          { "value": "danger", "label": "Danger"},
+          { "value": "warning", "label": "Warning"},
+          { "value": "info", "label": "Info"},
+          { "value": "light", "label": "Light"},
+          { "value": "dark", "label": "Dark"}
+        ],
+        "default": "dark"
       },
       {
         "type": "text",
@@ -2327,16 +2275,16 @@ we need to figure out what to do. Either get rid of the box or make it overflow
             "id": "eyebrow_style",
             "label": "Eyebrow style",
             "options": [
-              { "value": "badge-primary", "label": "Primary"},
-              { "value": "badge-secondary", "label": "Secondary"},
-              { "value": "badge-success", "label": "Success"},
-              { "value": "badge-danger", "label": "Danger"},
-              { "value": "badge-warning", "label": "Warning"},
-              { "value": "badge-info", "label": "Info"},
-              { "value": "badge-light", "label": "Light"},
-              { "value": "badge-dark", "label": "Dark"}
+              { "value": "primary", "label": "Primary"},
+              { "value": "secondary", "label": "Secondary"},
+              { "value": "success", "label": "Success"},
+              { "value": "danger", "label": "Danger"},
+              { "value": "warning", "label": "Warning"},
+              { "value": "info", "label": "Info"},
+              { "value": "light", "label": "Light"},
+              { "value": "dark", "label": "Dark"}
             ],
-            "default": "badge-dark"
+            "default": "dark"
           },
           {
             "type": "text",
@@ -2566,7 +2514,7 @@ we need to figure out what to do. Either get rid of the box or make it overflow
             "default":   "text-md-left",
             "info":      "Default: Left"
           },
-{
+          {
             "type": "header",
             "content": "----------- Block Settings ----------",
             "info": "Block settings are global to the block."
